# diary-cli

./: Cargo.toml  README.md
src/: args.rs  error.rs  main.rs  utils.rs
