[package]
name = "diary-cli"
description = "Small command line diary utility."

readme = "README.md"
license = "MIT"

repository = "https://github.com/TheLazyFerret/diary-cli"

version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
time = "0.3.46"
